syntax = "proto3";
package project.service.v1; // 代码生成的包名，可以改
option go_package = "project-project/pkg/service/project.service.v1"; // 代码生成放置路径，优先命令行
// protoc --go_out=./gen --go_opt=paths=source_relative --go-grpc_out=./gen --go-grpc_opt=paths=source_relative  login_service.proto

message MenuMessage {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string params = 7;
  string node = 8;
  int32 sort = 9;
  int32 status = 10;
  int64 createBy = 11;
  int32 isInner = 12;
  string values = 13;
  int32 showSlider = 14;
  repeated MenuMessage children = 15;
}

message IndexMessage {

}

message IndexResponse {
  repeated MenuMessage menus = 1;
}

service ProjectService {
  rpc Index(IndexMessage) returns (IndexResponse) {}
}